to remove the crawler logic and fix the other file path